<!--
  Copyright  2013 de Geraldo Augusto de Morais Figueiredo
  Este arquivo é parte do programa Monitora, Brasil!. O Monitora, Brasil! é um software livre.
  Você pode redistribuí-lo e/ou modificá-lo dentro dos termos da GNU Affero General Public License 
  como publicada pela Fundação do Software Livre (FSF); na versão 3 da Licença. 
  Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA,
  sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. 
  Veja a licença para maiores detalhes. 
  Você deve ter recebido uma cópia da GNU Affero General Public License, sob o título "LICENSE.txt", 
  junto com este programa, se não, acesse http://www.gnu.org/licenses/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ProjetoDetalheActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/bandeira_amarelo_claro" >

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/star"
                    style="?android:attr/starStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0"
                    android:contentDescription="@string/description_star"
                    android:onClick="favIconClick"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTipoProp"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/bandeira_amarelo_claro"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black" >

                <TextView
                    android:id="@+id/txtAno1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/avalie"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtRatingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/bandeira_amarelo_claro"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTwitterNome"
                style="@style/textoBranco"
                android:layout_weight="1"
                android:text="@string/situacao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSituacao"
                style="@style/textoBranco"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtTwitterMsg"
                style="@style/textoBranco"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/ementa"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmenta"
                style="@style/textoBranco"
                android:layout_width="fill_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtTwitterId"
                    style="@style/textoBranco"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/ultimodespacho"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDataUltDespacho"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtUltDespacho"
                style="@style/textoBranco"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtTwitterTempo"
                style="@style/textoBranco"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/link_inteiro_teor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLinkInteiroTeor"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="web" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
