<!--
  Copyright  2013 de Geraldo Augusto de Morais Figueiredo
  Este arquivo é parte do programa Monitora, Brasil!. O Monitora, Brasil! é um software livre.
  Você pode redistribuí-lo e/ou modificá-lo dentro dos termos da GNU Affero General Public License 
  como publicada pela Fundação do Software Livre (FSF); na versão 3 da Licença. 
  Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA,
  sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. 
  Veja a licença para maiores detalhes. 
  Você deve ter recebido uma cópia da GNU Affero General Public License, sob o título "LICENSE.txt", 
  junto com este programa, se não, acesse http://www.gnu.org/licenses/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity" >

    <RelativeLayout
        android:id="@+id/rlGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlPefil"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Google"
            android:textSize="20sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nome"
            android:visibility="invisible" >

        </com.google.android.gms.common.SignInButton>

        <Button
            android:id="@+id/revoke_access_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sign_out_button"
            android:enabled="false"
            android:minHeight="30dp"
            android:text="@string/revoke_access_button_name"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
            android:minHeight="30dp"
            android:text="@string/sign_out_button_name"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlFacebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlGoogle" >

        <com.facebook.widget.LoginButton
            android:id="@+id/loginFacebook"
            android:layout_width="144dp"
            android:layout_height="35dp"
            android:layout_below="@+id/partido"
            android:layout_marginTop="14dp" />

        <TextView
            android:id="@+id/partido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Facebook"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPefil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/profilepic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

        </com.facebook.widget.ProfilePictureView>

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profilepic2"
            android:text="@string/default_status" />

        <ImageView
            android:id="@+id/profilePicGoogle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
